force-app/main/default/objects/Etiquette__c/Etiquette__c.object-meta.xml
<CustomObject>
    <label>Étiquette</label>
    <nameField>
        <displayFormat>ETQ - {000000}</displayFormat>
        <label>Numéro de l&apos;étiquette</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Étiquettes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>