force-app/main/default/objects/Etiquette__c/fields/Date_de_rappel__c.field-meta.xml
<CustomField>
    <fullName>Date_de_rappel__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date de rappel</label>
    <type>Date</type>
</CustomField>