force-app/main/default/objects/Etiquette__c/fields/Equipement_du_foyer__c.field-meta.xml
<CustomField>
    <fullName>Equipement_du_foyer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Équipement du foyer</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Cet équipement du foyer n&apos;appartient pas au foyer sélectionné</errorMessage>
        <filterItems>
            <field>Equipements_du_foyer__c.Foyer__c</field>
            <operation>equals</operation>
            <valueField>$Source.Foyer__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Equipements_du_foyer__c</referenceTo>
    <relationshipLabel>Étiquettes</relationshipLabel>
    <relationshipName>Etiquettes</relationshipName>
    <type>Lookup</type>
</CustomField>