force-app/main/default/objects/Etiquette__c/fields/Foyer__c.field-meta.xml
<CustomField>
    <fullName>Foyer__c</fullName>
    <label>Foyer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Etiquettes</relationshipLabel>
    <relationshipName>Etiquettes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>