force-app/main/default/objects/Etiquette__c/fields/Foyer_paneliste__c.field-meta.xml
<CustomField>
    <fullName>Foyer_paneliste__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Foyer panéliste</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>La foyer panéliste sélectionné n&apos;appartient pas au foyer choisi</errorMessage>
        <filterItems>
            <field>Foyer_paneliste__c.Foyer__c</field>
            <operation>equals</operation>
            <valueField>$Source.Foyer__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Foyer_paneliste__c</referenceTo>
    <relationshipLabel>Étiquettes</relationshipLabel>
    <relationshipName>Etiquettes</relationshipName>
    <type>Lookup</type>
</CustomField>