force-app/main/default/objects/Etiquette__c/fields/Membre_du_foyer__c.field-meta.xml
<CustomField>
    <fullName>Membre_du_foyer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Composition du foyer</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Ce membre de foyer n&apos;existe pas ou ne fait pas partie de ce foyer</errorMessage>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Foyer__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Etiquettes</relationshipLabel>
    <relationshipName>Etiquettes</relationshipName>
    <type>Lookup</type>
</CustomField>