force-app/main/default/objects/Etiquette__c/fields/Nom_de_l_etiquette__c.field-meta.xml
<CustomField>
    <fullName>Nom_de_l_etiquette__c</fullName>
    <label>Nom de l&apos;étiquette</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Abo en cours de changement</fullName>
                <isActive>false</isActive>
                <label>Abo en cours de changement</label>
            </value>
            <value>
                <fullName>Mauvaise réception</fullName>
                <label>AIP Mauvaise réception</label>
            </value>
            <value>
                <fullName>Mouvement atypique</fullName>
                <label>AIP Mouvement atypique</label>
            </value>
            <value>
                <fullName>Peu écoute casque</fullName>
                <label>AIP  Peu écoute casque</label>
            </value>
            <value>
                <fullName>Profession atypique</fullName>
                <label>AIP Profession atypique</label>
            </value>
            <value>
                <fullName>Refus temporaire de participation</fullName>
                <label>AIP Refus temporaire de participation</label>
            </value>
            <value>
                <fullName>Set meter(s) débranché(s)</fullName>
                <label>AIP Set meter(s) débranché(s)</label>
            </value>
            <value>
                <fullName>Attente intervention Ambassadeur pour installation du Meter</fullName>
            </value>
            <value>
                <fullName>Attente matériel MM</fullName>
            </value>
            <value>
                <fullName>Autodésinstallation</fullName>
            </value>
            <value>
                <fullName>Autres usages +</fullName>
            </value>
            <value>
                <fullName>Box monobloc</fullName>
            </value>
            <value>
                <fullName>Chgt FAI/Box</fullName>
            </value>
            <value>
                <fullName>Chgt TV</fullName>
            </value>
            <value>
                <fullName>Ctrl abonnement</fullName>
            </value>
            <value>
                <fullName>Débranchés</fullName>
            </value>
            <value>
                <fullName>Déménagement</fullName>
            </value>
            <value>
                <fullName>Device HS</fullName>
            </value>
            <value>
                <fullName>Device Incompatible</fullName>
            </value>
            <value>
                <fullName>Equipé Non Actif</fullName>
            </value>
            <value>
                <fullName>Foyer PaME à chuter</fullName>
            </value>
            <value>
                <fullName>Foyer témoin</fullName>
            </value>
            <value>
                <fullName>Foyer test</fullName>
            </value>
            <value>
                <fullName>Foyer vacancier</fullName>
            </value>
            <value>
                <fullName>Gros conso TV</fullName>
            </value>
            <value>
                <fullName>Indispo prochains jours</fullName>
            </value>
            <value>
                <fullName>INJ Step1</fullName>
            </value>
            <value>
                <fullName>INJ Step2</fullName>
            </value>
            <value>
                <fullName>INJ Step3</fullName>
            </value>
            <value>
                <fullName>INJ Step4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>