force-app/main/default/objects/Etiquette__c/fields/Poste__c.field-meta.xml
<CustomField>
    <fullName>Poste__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Poste</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Ce poste n&apos;existe pas ou ne fait pas partie du foyer choisi</errorMessage>
        <filterItems>
            <field>Asset.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Foyer__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Etiquettes</relationshipLabel>
    <relationshipName>Etiquettes</relationshipName>
    <type>Lookup</type>
</CustomField>