force-app/main/default/objects/Etiquette__c/fields/Rappel_a_faire__c.field-meta.xml
<CustomField>
    <fullName>Rappel_a_faire__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rappel à faire</label>
    <type>Checkbox</type>
</CustomField>