force-app/main/default/objects/Etiquette__c/fields/Statut__c.field-meta.xml
<CustomField>
    <fullName>Statut__c</fullName>
    <label>Statut</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Actif</fullName>
                <default>true</default>
                <label>Actif</label>
            </value>
            <value>
                <fullName>Inactif</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>