force-app/main/default/objects/Etiquette__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <formula>IF(
				AND(
								NOT(ISBLANK(Foyer__c)),
								TEXT(Foyer__r.Type_de_foyer__c) = $Label.ACC_Type_de_panel_Mediamat
				),
				$Label.ACC_Type_de_panel_Mediamat_Label,
				IF(
								AND(
								    NOT(ISBLANK(Foyer__c)),
								    TEXT(Foyer__r.Type_de_foyer__c) = $Label.ACC_Type_de_panel_Pame
				    ),
								$Label.ACC_Type_de_panel_Pame_Label,
								IF(
								    AND(
								        NOT(ISBLANK(Membre_du_foyer__c)),
								        TEXT(Membre_du_foyer__r.Account.Type_de_foyer__c) = $Label.ACC_Type_de_panel_Pame
				        ),
								    $Label.ACC_Type_de_panel_Pame_Label,
												IF(
																AND(
								            NOT(ISBLANK(Membre_du_foyer__c)),
								            TEXT(Membre_du_foyer__r.Account.Type_de_foyer__c) = $Label.ACC_Type_de_panel_Mediamat
				            ),
								        $Label.ACC_Type_de_panel_Mediamat_Label,
																IF(
																    AND(
								                NOT(ISBLANK(Poste__c)),
								                TEXT(Poste__r.Account.Type_de_foyer__c) = $Label.ACC_Type_de_panel_Mediamat
				                ),
								            $Label.ACC_Type_de_panel_Mediamat_Label,
																				IF(
																        AND(
								                    NOT(ISBLANK(Poste__c)),
								                    TEXT(Poste__r.Account.Type_de_foyer__c) = $Label.ACC_Type_de_panel_Pame
				                    ),
								                $Label.ACC_Type_de_panel_Pame_Label,
																								&quot;&quot;
																				)
																)
												)
								)
				)
)</formula>
    <label>Type</label>
    <type>Text</type>
</CustomField>