force-app/main/default/objects/Etiquette__c/fields/Type_test__c.field-meta.xml
<CustomField>
    <fullName>Type_test__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>M/P</fullName>
            </value>
            <value>
                <fullName>P</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>