force-app/main/default/objects/Etiquette__c/validationRules/RV01_date_de_fin_obligatoire.validationRule-meta.xml
<ValidationRule>
    <fullName>RV01_date_de_fin_obligatoire</fullName>
    <active>true</active>
    <description>Règle qui oblige à renseigner la date de fin pour certaines étiquettes</description>
    <errorConditionFormula>AND(
				!$User.Bypass_validation_rules__c,
				ISBLANK(Date_de_fin__c),
				TEXT(Nom_de_l_etiquette__c) != $Label.ETI_Nom_de_l_etiquette_Foyer_test_temoin,
				!CONTAINS(TEXT(Nom_de_l_etiquette__c), $Label.ETI_Nom_de_l_etiquette_injoignable_step),
				TEXT(Nom_de_l_etiquette__c) != $Label.ETI_Nom_de_l_etiquette_Modif_cati3,
				TEXT(Nom_de_l_etiquette__c) != $Label.ETI_Nom_de_l_etiquette_Pilote_xxx
)</errorConditionFormula>
    <errorDisplayField>Date_de_fin__c</errorDisplayField>
    <errorMessage>La date de fin est obligatoire pour ce type d&apos;étiquette</errorMessage>
</ValidationRule>