force-app/main/default/objects/Etiquette__c/validationRules/RV03_date_de_fin_inferieure.validationRule-meta.xml
<ValidationRule>
    <fullName>RV03_date_de_fin_inferieure</fullName>
    <active>true</active>
    <description>Règle qui empêche la date de fin à être antérieure à la date de début</description>
    <errorConditionFormula>AND(
				!$User.Bypass_validation_rules__c,
				!$User.Bypass_RDD__c,
				Date_de_fin__c &lt; Date_de_debut__c
)</errorConditionFormula>
    <errorDisplayField>Date_de_fin__c</errorDisplayField>
    <errorMessage>La date de fin doit être postérieure à la date de début</errorMessage>
</ValidationRule>