force-app/main/default/objects/Etiquette__c/validationRules/RV04_verification_date_de_debut.validationRule-meta.xml
<ValidationRule>
    <fullName>RV04_verification_date_de_debut</fullName>
    <active>true</active>
    <description>Règle qui vérifie que la date de début n&apos;est pas inférieure à aujourd&apos;hui.</description>
    <errorConditionFormula>AND(
				!$User.Bypass_validation_rules__c,
				!$User.Bypass_RDD__c,
				OR( 
				    Date_de_debut__c &lt; DATEVALUE(CreatedDate),
								AND(
								    ISNEW(),
								    Date_de_debut__c &lt; TODAY()
								)
				)
)</errorConditionFormula>
    <errorDisplayField>Date_de_debut__c</errorDisplayField>
    <errorMessage>La date de début ne peut pas être inférieure à la date de création</errorMessage>
</ValidationRule>