force-app/main/default/objects/Etiquette__c/listViews/Etiquettes_for_CTI_tests.listView-meta.xml
<ListView>
    <fullName>Etiquettes_for_CTI_tests</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>Etiquettes for CTI tests</label>
</ListView>