force-app/main/default/objects/Etiquette__c/listViews/Les_etiquettes_actives.listView-meta.xml
<ListView>
    <fullName>Les_etiquettes_actives</fullName>
    <columns>Foyer_paneliste__c</columns>
    <columns>NAME</columns>
    <columns>Nom_de_l_etiquette__c</columns>
    <columns>Poste__c</columns>
    <columns>Date_de_debut__c</columns>
    <columns>Date_de_fin__c</columns>
    <columns>Statut__c</columns>
    <columns>Type_de_Panel__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type_de_Panel__c</field>
        <operation>notEqual</operation>
        <value>AIP</value>
    </filters>
    <filters>
        <field>Statut__c</field>
        <operation>equals</operation>
        <value>Actif</value>
    </filters>
    <filters>
        <field>Nom_de_l_etiquette__c</field>
        <operation>equals</operation>
        <value>Foyer PaME à chuter</value>
    </filters>
    <label>Les étiquettes actives</label>
</ListView>