force-app/main/default/objects/Etiquette__c/listViews/Les_etiquettes_inactives.listView-meta.xml
<ListView>
    <fullName>Les_etiquettes_inactives</fullName>
    <columns>NAME</columns>
    <columns>Nom_de_l_etiquette__c</columns>
    <columns>Foyer__c</columns>
    <columns>Membre_du_foyer__c</columns>
    <columns>Poste__c</columns>
    <columns>Date_de_debut__c</columns>
    <columns>Date_de_fin__c</columns>
    <columns>Statut__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Statut__c</field>
        <operation>equals</operation>
        <value>Inactif</value>
    </filters>
    <label>Les étiquettes inactives</label>
</ListView>