force-app/main/default/objects/Etiquette__c/listViews/Pilote.listView-meta.xml
<ListView>
    <fullName>Pilote</fullName>
    <columns>NAME</columns>
    <columns>Foyer_paneliste__c</columns>
    <columns>Type_de_Panel__c</columns>
    <columns>Date_de_debut__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Nom_de_l_etiquette__c</field>
        <operation>equals</operation>
        <value>Pilote portail SF</value>
    </filters>
    <label>Pilote</label>
</ListView>