force-app/main/default/objects/Etiquette__c/listViews/Suivi_Pilote_PaME.listView-meta.xml
<ListView>
    <fullName>Suivi_Pilote_PaME</fullName>
    <columns>CREATED_DATE</columns>
    <columns>Foyer__c</columns>
    <columns>Nom_de_l_etiquette__c</columns>
    <columns>Statut__c</columns>
    <columns>Date_de_debut__c</columns>
    <columns>Date_de_fin__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Nom_de_l_etiquette__c</field>
        <operation>contains</operation>
        <value>Pilote TvRouteur</value>
    </filters>
    <label>Suivi Pilote PaME</label>
</ListView>