force-app/main/default/objects/Etiquette__c/listViews/TEST_HW.listView-meta.xml
<ListView>
    <fullName>TEST_HW</fullName>
    <columns>Foyer__c</columns>
    <columns>Nom_de_l_etiquette__c</columns>
    <columns>NAME</columns>
    <columns>Date_de_debut__c</columns>
    <columns>Date_de_fin__c</columns>
    <columns>Statut__c</columns>
    <columns>Rappel_a_faire__c</columns>
    <columns>Date_de_rappel__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Date_de_debut__c</field>
        <operation>lessOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>Nom_de_l_etiquette__c</field>
        <operation>equals</operation>
        <value>Autodésinstallation,Matériel autodésinstall non reçu ou incomplet,Matériel autodésinstall en attente</value>
    </filters>
    <filters>
        <field>Date_de_rappel__c</field>
        <operation>lessOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <label>Suivi auto désinstallation</label>
</ListView>