force-app/main/default/objects/Etiquette__c/listViews/Toutes_les_tiquettes.listView-meta.xml
<ListView>
    <fullName>Toutes_les_tiquettes</fullName>
    <columns>NAME</columns>
    <columns>Nom_de_l_etiquette__c</columns>
    <columns>Statut__c</columns>
    <columns>Date_de_debut__c</columns>
    <columns>Date_de_fin__c</columns>
    <columns>Foyer__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Nom_de_l_etiquette__c</field>
        <operation>equals</operation>
        <value>Débranchés</value>
    </filters>
    <filters>
        <field>Statut__c</field>
        <operation>equals</operation>
        <value>Actif</value>
    </filters>
    <label>Toutes les étiquettes</label>
</ListView>